--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "vue-tsc": "^1.0.18"
   },
   "browserslist": [
     "last 10 Chrome versions",
