--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
+    "type-check": "tsc --noEmit; vue-tsc --noEmit",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev -m electron"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
