--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@quasar/app-webpack": "^3.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/node": "^12.20.21",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "electron": "^22.0.0",
@@ -32,6 +32,9 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
+    "prisma": "^4.8.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
     "vue-tsc": "^1.0.18"
   },
   "browserslist": [
