--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "type-check": "tsc --noEmit; vue-tsc --noEmit",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev -m electron"
+    "dev": "quasar dev -m electron",
+    "// prisma": "",
+    "prisma:migrate": "echo 'マイグレーション名を入力' && read MIGRATION_NAME && prisma migrate dev --name $MIGRATION_NAME && yarn prisma:generate",
+    "prisma:migration": "prisma migrate dev && yarn prisma:generate",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
