--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   "dependencies": {
     "@prisma/client": "4.8.0",
     "@quasar/extras": "^1.0.0",
+    "@trpc/client": "^10.7.0",
+    "@trpc/server": "^10.7.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "express": "^4.18.2",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@quasar/app-webpack": "^3.0.0",
