--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
+    "vue-query": "^1.26.0",
     "vue-router": "^4.0.0",
     "zod": "^3.20.2"
   },
@@ -37,6 +38,7 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "dotenv": "^16.0.3",
     "electron": "^22.0.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
