--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "prisma:migration": "prisma migrate dev && yarn prisma:generate",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
-    "vue:devtools": "quasar dev -m electron --devtools"
+    "vue:devtools": "./node_modules/.bin/vue-devtools"
   },
   "dependencies": {
     "@prisma/client": "4.8.0",
     "@quasar/extras": "^1.0.0",
     "@trpc/client": "^10.7.0",
     "@trpc/server": "^10.7.0",
+    "@vue/devtools": "^6.5.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "express": "^4.18.2",
