--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "prisma:migration": "prisma migrate dev && yarn prisma:generate",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
-    "vue:devtools": "./node_modules/.bin/vue-devtools"
   },
   "dependencies": {
     "@prisma/client": "4.8.0",
@@ -31,6 +30,7 @@
     "quasar": "^2.6.0",
     "superjson": "^1.12.1",
     "vue": "^3.0.0",
+    "vue:devtools": "./node_modules/.bin/vue-devtools",
     "vue-query": "^1.26.0",
     "vue-router": "^4.0.0",
     "zod": "^3.20.2"
