--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "paths": {
-      "#/*": ["src-electron/*"]
+      "#/*": ["src-electron/*"],
+      "%/*": ["prisma/*"]
     }
   }
 }
