--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prisma:migrate": "echo 'マイグレーション名を入力' && read MIGRATION_NAME && prisma migrate dev --name $MIGRATION_NAME && yarn prisma:generate",
     "prisma:migration": "prisma migrate dev && yarn prisma:generate",
     "prisma:generate": "prisma generate",
+    "prisma:seed": "ts-node -r tsconfig-paths/register prisma/seed/index.ts",
     "prisma:studio": "prisma studio",
     "vue:devtools": "./node_modules/.bin/vue-devtools"
   },
@@ -67,5 +68,8 @@
     "node": ">= 12.22.1",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
+  },
+  "prisma": {
+    "seed": "yarn prisma:seed"
   }
 }
