--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier": "^2.5.1",
     "prisma": "^4.8.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.4",
     "vue-tsc": "^1.0.18"
   },
